# yearn-fees

./: .gitignore  assess_fees.py  compile_sources.py  fetch_sample_traces.py  find_program_counters.py  map_values.py  pyproject.toml  read_from_trace.py  readme.md  vault-mapping.yml
metadata/: pcs_by_version.json
patches/: 0.3.5.patch  vyper_memory_layout.patch
sources/: Vault_v0.3.0.vy  Vault_v0.3.1.vy  Vault_v0.3.2.vy  Vault_v0.3.3.vy  Vault_v0.3.5.vy  Vault_v0.4.2.vy  Vault_v0.4.3.vy
yearn_fees/: assess.py  assess_fees.py  cache.py  cli.py  compare.py  fees.py  fetch_sample_traces.py  find_program_counters.py  fork.py  indexer.py  map_values.py  measure_trace.py  memory_layout.py  models.py  read_from_trace.py  scanner.py  traces.py  types.py  utils.py  vault_utils.py  vmtrace.py
