[tool.black]
line-length = 100

[tool.isort]
line_length = 100

[tool.poetry]
name = "yearn-fees"
version = "0.1.0"
description = "accurate fee accounting of yearn fees"
authors = ["banteg"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
"eth-ape" = "git+git@github.com:banteg/ape.git#bunny-patch"
diskcache = "^5.4.0"
toolz = "^0.11.2"
pony = "^0.7.16"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yearn-fees = 'yearn_fees.cli:cli'
